update index and add new versionhistory pages

--- a/historique_révisions.html
+++ b/historique_révisions.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
     wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-    <title>Processus d'inscription réglementaire (PIR) pour les produits pharmaceutiques humain et vétérinaire et désinfectants  </title>
+    <title>Historique des révisions des modèles du processus d’inscription réglementaire (PIR) </title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
     <meta name="description"
@@ -28,7 +28,7 @@
 
     <![endif]-->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    <!--<link rel="stylesheet" href="./app/styles/rep.css ">-->
+    <link rel="stylesheet" href="./css/rep.css ">
     <noscript>
         <link rel="stylesheet" href="./wet-boew/css/noscript.min.css"/>
     </noscript>
@@ -141,138 +141,77 @@
     <!--content starts here -->
     <div>
         <div class="row">
-            <h1 property="name" id="wb-cont"> Processus d'inscription réglementaire (PIR) pour les produits pharmaceutiques humain et vétérinaire et désinfectants </h1>
+            <h1 property="name" id="wb-cont">Historique des révisions des modèles du processus d’inscription réglementaire (PIR)</h1>
         </div>
         <div>
             <div class="row">
-                <h2>Liens de modèle et le de formulaire</h2>
-            </div>
-            <div class="row">
-                <a href="./historique_révisions.html">Historique des versions du modèle  (mise à jour 03/05/2021)</a>
-                <br>
-            </div>
-            <div class="row">
-                <h2>En dehors du processus de transaction réglementaire</h2>
-            </div>
-            <div class="row">
-                <a href="./prod_v42_wcag/company/entreprise.html">Modèle de l'entreprise (mise à jour 03/05/2021)</a>
-                <ul>
-                    <li> Obligatoire pour obtenir un identifiant d'entreprise et / ou fournir des informations à jour sur l'entreprise à Santé Canada.</li>
-                    <li> Envoyé via la PCDE en tant que transaction distincte; en dehors de la transaction réglementaire (soumission).</li>
-                    <li> Reportez-vous à la section «2.3 Processus d’inscription ou de modification de l’entreprise » et «3.2 Structure des dossiers» du document d'orientation PIR, et au didacticiel vidéo PIR # 2 ci-dessous pour les exigences détaillées du modèle CO.</li>
-                </ul>
-            </div>
-            <br>
-            <div class="row">
-                <a href="https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/depot-soumissions-electroniques/modele-dossier-pharmaceutique.html">Formulaire de demande pour les ID de dossiers pour les médicaments à usage humain et désinfectant  (mise à jour fév. 2020)</a>
-                <ul>
-                    <li> Obligation d'obtenir un ID de dossier, avant de déposer une transaction réglementaire pour un nouveau dossier, lors de la conversion d'un dossier d'un format non-eCTD au format eCTD, ou lors du dépôt d'une transaction réglementaire pour un dossier dont vous ne connaissez pas l'ID de dossier.</li>
-                    <li> Une fois rempli, le formulaire est envoyé automatiquement par courriel à Santé Canada, en dehors de la transaction réglementaire (soumission).</li>
-                    <li> Reportez-vous à la section «2.4 Processus de demande pour un ID de dossier» du document d'orientation PIR, et au didacticiel vidéo PIR n ° 3 ci-dessous pour plus de détails sur le processus d'identification de dossier.</li>
-                </ul>
-            </div>
-            <div class="row">
-                <a href="https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/depot-soumissions-electroniques/modele-dossier-pharmaceutique.html">Formulaire de demande pour les ID de dossiers pour les médicaments vétérinaires (mise à jour fév. 2021)</a>
-                <ul>
-                    <li> Obligation d'obtenir un ID de dossier, avant de déposer une transaction réglementaire pour un nouveau dossier, lors de la conversion d'un dossier d'un format non-eCTD au format eCTD, ou lors du dépôt d'une transaction réglementaire pour un dossier dont vous ne connaissez pas l'ID de dossier.</li>
-                    <li> Une fois rempli, le formulaire est envoyé automatiquement par courriel à Santé Canada, en dehors de la transaction réglementaire (soumission).</li>
-                    <li> Reportez-vous à la section «2.4 Processus de demande pour un ID de dossier» du document d'orientation PIR, et au didacticiel vidéo PIR n ° 3 ci-dessous pour plus de détails sur le processus d'identification de dossier.</li>
-                </ul>
-            </div>
-            <div class="row">
-                <h2>Dans le cadre du processus de transaction réglementaire</h2>
-            </div>
-            <!--<br>-->
-            <!--<div class="row">-->
-            <!--<a href="./prod_v3/converter/converter.html#main">Product Information Template Data Converter: Version 2 to Version 3 - External (Aug 14, 2019, v3.0.4)</a>-->
-            <!--</div>-->
-            <!--<div class="row">-->
-                <!--<a href="./prod_v42/transaction422/réglementaire-transaction.html#main">Modèle de transaction réglementaire (TR) (V4.2.2 mise à jour 29/03/2021)</a>-->
-                <!--<ul>-->
-                    <!--<li> Obligatoire avec chaque transaction réglementaire déposée auprès de Santé Canada.</li>-->
-                    <!--<li> Envoyé via la PCDC dans le dossier 1.2.1 de la transaction réglementaire (soumission).</li>-->
-                    <!--<li> Reportez-vous à la section «2.5 Processus de dépôt de transactions réglementaires» et «3.2 Structure des dossiers» du document d'orientation PIR, et au didacticiel vidéo PIR # 4, pour une description détaillée des exigences pour les modèles TR et IP.</li>-->
-                <!--</ul>-->
-            <!--</div>-->
-            <!--<div class="row">-->
-                <!--<a href="./prod_v42/transaction/réglementaire-transaction.html#main">Modèle de transaction réglementaire (TR) (V4.2.3 mise à jour 05/03/2021)</a>-->
-                <!--<ul>-->
-                    <!--<li> Obligatoire avec chaque transaction réglementaire déposée auprès de Santé Canada.</li>-->
-                    <!--<li> Envoyé via la PCDC dans le dossier 1.2.1 de la transaction réglementaire (soumission).</li>-->
-                    <!--<li> Reportez-vous à la section «2.5 Processus de dépôt de transactions réglementaires» et «3.2 Structure des dossiers» du document d'orientation PIR, et au didacticiel vidéo PIR # 4, pour une description détaillée des exigences pour les modèles TR et IP.</li>-->
-                <!--</ul>-->
-            <!--</div>-->
-            <div class="row">
-                <a href="./prod_v42_wcag/transaction/réglementaire-transaction.html">Modèle de transaction réglementaire (TR) pour les médicaments à usage humain et désinfectants ( mise à jour 03/05/2021)</a>
-                <ul>
-                    <li> Obligatoire avec chaque transaction réglementaire déposée auprès de Santé Canada.</li>
-                    <li> Envoyé via la PCDE dans le dossier 1.2.1 pour les médicaments à usage humain ou partie I dossier 1.5 pour les médicaments vétérinaires de la transaction réglementaire (soumission).</li>
-                    <li> Reportez-vous à la section «2.5 Modèle de transaction réglementaire (TR) et processus» et «3.2 Structure des dossiers» du document d'orientation du PIR, et au didacticiel vidéo du PIR # 4, pour une description détaillée des exigences pour les modèles TR et IP.</li>
-                </ul>
-            </div>
-            <div class="row">
-                <a href="./prod_v42_wcag/product/produit.html">Modèle d'information sur le produit (IP) (mise à jour 03/05/2021)</a>
-                <ul>
-                    <li> Obligatoire lors du dépôt d'une nouvelle activité réglementaire pour un PDN, SPDN, PADN, SPADN, PM, DDIN (tous types) ou CPA, ou lors d'une transaction ultérieure pour une activité réglementaire existante.</li>
-                    <li> Envoyé via la PCDE dans le dossier 1.2.1 pour les médicaments à usage humain ou partie I dossier 1.5 pour les médicaments vétérinaires de la transaction réglementaire (si fourni).</li>
-                    <li> Reportez-vous aux sections «2.5 Modèle de transaction réglementaire (TR) et processus» et «3.2 Structure des dossiers» du document d'orientation du PIR, et au didacticiel vidéo du PIR # 4, pour une description détaillée des exigences pour les modèles TR et IP.</li>
-                </ul>
-            </div>
-            <!--<div class="row">-->
-            <!--<span>-->
-            <!--<strong class="text-danger">Remarque importante: Ce modèle doit être utilisé pour les transactions réglementaires prévues à être déposées AVANT le 1er avril 2020 SEULEMENT.</strong>-->
-            <!--</span>-->
-            <!--</div>-->
-            <!--<br>-->
-            <!--<div class="row">-->
-            <!--<a href="./prod_v3/transactionCostRecovery/réglementaire-transaction.html#main">Modèle de transaction réglementaire (mise à jour mars 2020) </a>-->
-            <!--</div>-->
-            <!--<div class="row">-->
-            <!--<span>-->
-            <!--<strong class="text-danger">Remarque importante: Ce modèle comprend les frais révisés à partir du 1er avril 2020 et devrait être utilisé pour les transactions réglementaires prévues à être déposées le 1er avril 2020 ou APRÈS.</strong>-->
-            <!--</span>-->
-            <!--</div>-->
-        </div>
+                <p>Santé Canada a mis à jour les modèles du processus d’inscription réglementaire (PIR) afin de refléter les modifications et les améliorations apportées. Reportez-vous à la Ligne directrice : Processus d’inscription réglementaire (PIR) : Médicaments à usage humain, à usage vétérinaire et désinfectants pour plus de renseignements sur les modèles.</p>
+                <p>Afin d’accéder à la version la plus récente du modèle, n’oubliez pas de supprimer fréquemment votre mémoire cache et d’« actualiser » les liens du modèle sur votre navigateur Web avant chaque utilisation.</p>
+                <p>Si vous avez des questions concernant le contenu de ce document, veuillez communiquer avec <a href="mailto:hc.ereview.sc@canada.ca" lang="en">hc.ereview.sc@canada.ca</a>.</p>
 
-        <div>
-            <div class="row">
-                <h2>Liens de téléchargement de feuilles de style </h2>
             </div>
-            <!--<div class="row">-->
-            <!--<a href="./stylesheet/pharmabio_stylesheets_2_0_1.zip">Download v2.0 stylesheet zip file (Feb 07, 2019) </a>-->
-            <!--</div>-->
-            <!--<div class="row">-->
-            <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_en.zip">Download V3.1 stylesheet zip file (English version, Feb 27, 2020) </a>-->
-            <!--</div>-->
-            <!--<div class="row">-->
-            <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_fr.zip">Download V3.1 stylesheet zip file (French version, Feb 27, 2020) </a>-->
-            <!--</div>-->
+
             <div class="row">
-                <a href="./stylesheet/pharmabio_stylesheets_fr.zip">Télécharger le fichier zip des feuilles de style V3.0, V3.1, V4.0, V4.1 et V4.2 (mise à jour 03/05/2021) </a>
+                <h3>Publication du 3 mai 2021</h3>
+            </div>
+            <div>
+                <table class="col-md-12">
+                    <tr>
+                        <th class="col-md-3">Modèle</th>
+                        <th class="col-md-9">Modification</th>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Modèle de compagnie (CO)
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Ajout du champ « Motif du dépôt ». Reportez-vous aux instructions sur le modèle de compagnie pour plus de renseignements.</li>
+                                <li>Suppression du rôle de la compagnie importatrice et du rôle du contact de l’importateur. Pour plus de renseignements, consultez la section 3 de la Ligne directrice du PIR.</li>
+                                <li>Mise à jour et clarification des instructions de divers champs.</li>
+                                <li>Révision de la liste de sélection « Pays ».</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Modèle de transaction réglementaire (TR)
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Mise à jour des options de la liste de sélection pour « Type de dossier », « Responsable de l’activité de réglementation », « Types d’activité de réglementation » et « Descriptions des transactions associées » afin d’intégrer les médicaments à usage vétérinaire.</li>
+                                <li>Mise à jour des instructions de divers champs afin d’inclure les médicaments à usage vétérinaire.</li>
+                                <li>Mise à jour et clarification des instructions de divers champs et ajout de descriptions supplémentaires pour les champs.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Modèle d’information sur le produit (IP)
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Résolution des bogues.</li>
+                                <li>Ajout d’une option pour les renseignements exclusifs dans la section Formulation et révision des exigences connexes pour les ingrédients non médicinaux. Reportez-vous à la section 5 de la Ligne directrice du PIR pour plus de renseignements.</li>
+                                <li>Révision de la liste de sélection « Calculé comme base » pour inclure l’option « L’ingrédient n’est pas un sel ».</li>
+                                <li>Mise à jour et clarification des instructions de divers champs.</li>
+                                <li>Suppression du préfixe HC6-024 du champ « ID de dossier ».</li>
+                                <li>Suppression du champ « ID de la compagnie importatrice ».</li>
+                                <li>Mise à jour des instructions de différents champs spécifiques aux médicaments à usage vétérinaire.</li>
+                                <li>Révision de la liste de sélection « Pays ».</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Ensemble de feuilles de style
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Nouvelles feuilles de style CO et IP version 4.2 pour correspondre aux modifications apportées aux modèles du PIR  CO et IP..</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
 
-        <div>
-            <div class="row">
-                <h2>Liens de téléchargement du didacticiel vidéo</h2>
-            </div>
-            <div class="row">
-                <a href="https://youtu.be/UJwHanro80o" target="_blank" rel="noopener noreferrer">
-                    Didacticiel vidéo PIR no. 1: Aperçu</a>
-            </div>
-            <div class="row">
-                <a href="https://youtu.be/VbM8seA9f3Q" target="_blank" rel="noopener noreferrer">
-                    Didacticiel vidéo PIR no. 2: Modèle d'entreprise</a>
-            </div>
-            <div class="row">
-                <a href="https://youtu.be/T6EQ6UA3XDI" target="_blank" rel="noopener noreferrer">
-                    Didacticiel vidéo PIR no. 3: Demande d'ID de dossier</a>
-            </div>
-            <div class="row">
-                <a href="https://youtu.be/q88jb8TYMtU" target="_blank" rel="noopener noreferrer">
-                    Didacticiel vidéo PIR no. 4: Modèles de transactions réglementaires et d'information sur le produit</a>
-            </div>
-        </div>
     </div>
     <!--content ends here -->
 
