--- a/pilot_v42_index.html
+++ b/pilot_v42_index.html
@@ -155,10 +155,14 @@
                         <h2>REP Templates & Form Links</h2>
                     </div>
                     <div class="row">
+                        <a href="./version_history.html">Template version history  (updated 2021-05-03)</a>
+                        <br>
+                    </div>
+                    <div class="row">
                         <h2>Outside the Regulatory Transaction Process</h2>
                     </div>
                     <div class="row">
-                        <a href="./prod_v42_wcag/company/company.html">Company Template (V4.2) (2021-04-14)</a>
+                        <a href="./prod_v42_wcag/company/company.html">Company Template (V4.2) (2021-05-03)</a>
                         <ul>
                             <li>Sent via the CESG as a separate transaction, outside of the regulatory transaction (submission).</li>
                             <li>Required to obtain a company ID and/or provide updated company information to Health Canada.</li>
@@ -192,8 +196,24 @@
                     <div class="row">
                         <h2>Within the Regulatory Transaction Process</h2>
                     </div>
+                    <!--<div class="row">-->
+                        <!--<a href="./pilot_v42/transaction422/regulatory-transaction.html">Regulatory Transaction (RT) Template (V4.2.2 updated on March 29, 2021)</a>-->
+                        <!--<ul>-->
+                            <!--<li>Required with each regulatory transaction filed to Health Canada.</li>-->
+                            <!--<li>Sent via the CESG within the regulatory transaction (submission).</li>-->
+                            <!--<li>Refer to section “2.5 Filing of RT and PI” and “2.6.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT template.</li>-->
+                        <!--</ul>-->
+                    <!--</div>-->
+                    <!--<div class="row">-->
+                        <!--<a href="./pilot_v42/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (V4.2.3 updated on March 5, 2021)</a>-->
+                        <!--<ul>-->
+                            <!--<li>Required with each regulatory transaction filed to Health Canada.</li>-->
+                            <!--<li>Sent via the CESG within the regulatory transaction (submission).</li>-->
+                            <!--<li>Refer to section “2.5 Filing of RT and PI” and “2.6.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT template.</li>-->
+                        <!--</ul>-->
+                    <!--</div>-->
                     <div class="row">
-                        <a href="./pilot_v42/transaction422/regulatory-transaction.html">Regulatory Transaction (RT) Template (V4.2.2 updated on March 29, 2021)</a>
+                        <a href="./pilot_v42_wcag/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (updated on 2021-05-03)</a>
                         <ul>
                             <li>Required with each regulatory transaction filed to Health Canada.</li>
                             <li>Sent via the CESG within the regulatory transaction (submission).</li>
@@ -201,23 +221,7 @@
                         </ul>
                     </div>
                     <div class="row">
-                        <a href="./pilot_v42/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (V4.2.3 updated on March 5, 2021)</a>
-                        <ul>
-                            <li>Required with each regulatory transaction filed to Health Canada.</li>
-                            <li>Sent via the CESG within the regulatory transaction (submission).</li>
-                            <li>Refer to section “2.5 Filing of RT and PI” and “2.6.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT template.</li>
-                        </ul>
-                    </div>
-                    <div class="row">
-                        <a href="./pilot_v42_wcag/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (V4.2.4 updated on April 14, 2021)</a>
-                        <ul>
-                            <li>Required with each regulatory transaction filed to Health Canada.</li>
-                            <li>Sent via the CESG within the regulatory transaction (submission).</li>
-                            <li>Refer to section “2.5 Filing of RT and PI” and “2.6.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT template.</li>
-                        </ul>
-                    </div>
-                    <div class="row">
-                        <a href="./pilot_v42_wcag/product/product.html">Product Information Template (V4.2 updated on April 14, 2021)</a>
+                        <a href="./pilot_v42_wcag/product/product.html">Product Information Template (V4.2 updated on 2021-05-03)</a>
                         <ul>
                             <li>Required within the initial transaction of specified regulatory activities or when providing changes to the product information in a subsequent transaction for an existing regulatory activity.</li>
                             <li>Sent via the CESG within the regulatory transaction (submission).</li>
@@ -242,7 +246,7 @@
                         <h2>Stylesheet Download Link</h2>
                     </div>
                     <div class="row">
-                        <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V2.0, v2.2, V3.0, V3.1, V4.0, V4.1 and V4.2 stylesheet zip file (English version, Feb 16, 2021) </a>
+                        <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V2.0, v2.2, V3.0, V3.1, V4.0, V4.1 and V4.2 stylesheet zip file (English version, 2021-05-03) </a>
                     </div>
                 </div>
 
@@ -273,7 +277,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: 2021-04-14</dt>
+                    <dt>Date modified: 2021-05-03</dt>
                 </dl>
             </div>
         </div>
