--- a/prod_v42_index.html
+++ b/prod_v42_index.html
@@ -144,17 +144,21 @@
     <!--content starts here -->
     <div>
         <div class="row">
-            <h1 property="name" id="wb-cont">Regulatory Enrolment Process (REP) for Pharmaceuticals and Biologics</h1>
+            <h1 property="name" id="wb-cont">Regulatory Enrolment Process (REP) for Human and Veterinary Drugs and Disinfectants</h1>
         </div>
         <div>
             <div class="row">
                 <h2>REP Templates & Form Links</h2>
             </div>
             <div class="row">
+                <a href="./version_history.html">Template version history  (updated 2021-05-03)</a>
+                <br>
+            </div>
+            <div class="row">
                 <h2>Outside the Regulatory Transaction Process</h2>
             </div>
             <div class="row">
-                <a href="./prod_v42_wcag/company/company.html">Company (CO) Template (updated 2021-04-14, v4.2)</a>
+                <a href="./prod_v42_wcag/company/company.html">Company (CO) Template (updated 2021-05-03)</a>
                 <ul>
                     <li> Required to obtain a company ID and/or providing updated company information to Health Canada.</li>
                     <li> Sent via the CESG as a separate transaction; outside of the regulatory transaction (submission).</li>
@@ -162,7 +166,18 @@
                 </ul>
             </div>
             <div class="row">
-                <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/filing-submissions-electronically/pharmaceutical-dossier-template.html">Dossier ID Request Form</a>
+                <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/filing-submissions-electronically/pharmaceutical-dossier-template.html">Dossier ID Request Form for Human drugs and disinfectants</a>
+                <ul>
+                    <li> Required to obtain a Dossier ID, prior to filing a regulatory transaction for a new dossier, when converting a dossier from non-eCTD to eCTD format, or when filing a regulatory transaction for a dossier for which you do not know the Dossier ID.</li>
+                    <li> Upon completion, the form is auto-sent via email the Health Canada, outside of the regulatory transaction (submission).</li>
+                    <li> Refer to section “2.4 Dossier ID Request Process” of the REP guidance document, and REP Video Tutorial #3 below for details regarding the Dossier ID process.</li>
+                </ul>
+            </div>
+            <div class="row">
+                <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/filing-submissions-electronically/veterinary-dossier-template.html">
+                    Dossier ID Request Form for Veterinary drugs
+                </a>
+
                 <ul>
                     <li> Required to obtain a Dossier ID, prior to filing a regulatory transaction for a new dossier, when converting a dossier from non-eCTD to eCTD format, or when filing a regulatory transaction for a dossier for which you do not know the Dossier ID.</li>
                     <li> Upon completion, the form is auto-sent via email the Health Canada, outside of the regulatory transaction (submission).</li>
@@ -172,35 +187,35 @@
             <div class="row">
                 <h2>Within the Regulatory Transaction Process</h2>
             </div>
+            <!--<div class="row">-->
+                <!--<a href="./prod_v42/transaction422/regulatory-transaction.html">Regulatory Transaction (RT) Template (V4.2.2 updated on March 29, 2021)</a>-->
+                <!--<ul>-->
+                    <!--<li> Required with each regulatory transaction filed to Health Canada.</li>-->
+                    <!--<li> Sent via the CESG in folder 1.2.1  for human drugs and disinfectants or part I folder 1.5 for veterinary drugs of the regulatory transaction (submission).</li>-->
+                    <!--<li> Refer to section “2.5 Regulatory Transaction Filing Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>-->
+                <!--</ul>-->
+            <!--</div>-->
+            <!--<div class="row">-->
+                <!--<a href="./prod_v42/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (V4.2.3 updated on March 5, 2021)</a>-->
+                <!--<ul>-->
+                    <!--<li> Required with each regulatory transaction filed to Health Canada.</li>-->
+                    <!--<li> Sent via the CESG in folder 1.2.1  for human drugs and disinfectants or part I folder 1.5 for veterinary drugs of the regulatory transaction (submission).</li>-->
+                    <!--<li> Refer to section “2.5 Regulatory Transaction Filing Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>-->
+                <!--</ul>-->
+            <!--</div>-->
             <div class="row">
-                <a href="./prod_v42/transaction422/regulatory-transaction.html">Regulatory Transaction (RT) Template (V4.2.2 updated on March 29, 2021)</a>
+                <a href="./prod_v42_wcag/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (updated on 2021-05-03)</a>
                 <ul>
                     <li> Required with each regulatory transaction filed to Health Canada.</li>
-                    <li> Sent via the CESG in folder 1.2.1 of the regulatory transaction (submission).</li>
+                    <li> Sent via the CESG in folder 1.2.1  for human drugs and disinfectants or part I folder 1.5 for veterinary drugs of the regulatory transaction (submission).</li>
                     <li> Refer to section “2.5 Regulatory Transaction Filing Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>
                 </ul>
             </div>
             <div class="row">
-                <a href="./prod_v42/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (V4.2.3 updated on March 5, 2021)</a>
-                <ul>
-                    <li> Required with each regulatory transaction filed to Health Canada.</li>
-                    <li> Sent via the CESG in folder 1.2.1 of the regulatory transaction (submission).</li>
-                    <li> Refer to section “2.5 Regulatory Transaction Filing Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>
-                </ul>
-            </div>
-            <div class="row">
-                <a href="./prod_v42_wcag/transaction/regulatory-transaction.html">Regulatory Transaction (RT) Template (V4.2.4 updated on April 14, 2021)</a>
-                <ul>
-                    <li> Required with each regulatory transaction filed to Health Canada.</li>
-                    <li> Sent via the CESG in folder 1.2.1 of the regulatory transaction (submission).</li>
-                    <li> Refer to section “2.5 Regulatory Transaction Filing Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>
-                </ul>
-            </div>
-            <div class="row">
-                <a href="./prod_v42_wcag/product/product.html">Product Information (PI) Template (V4.2 updated on April 14, 2021)</a>
+                <a href="./prod_v42_wcag/product/product.html">Product Information (PI) Template (updated on 2021-05-03)</a>
                 <ul>
                     <li> Required when filing a new regulatory activity for an NDS, SNDS, ANDS, SANDS, NC, DIN (all types), or PDC, or in a subsequent transaction for an existing regulatory activity.</li>
-                    <li> Sent via the CESG in folder 1.2.1 of the regulatory transaction (when provided).</li>
+                    <li> Sent via the CESG in folder 1.2.1  for human drugs and disinfectants or part I folder 1.5 for veterinary drugs of the regulatory transaction (when provided).</li>
                     <li> Refer to sections “2.5 Regulatory Transaction Filing Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>
                 </ul>
             </div>
@@ -250,7 +265,7 @@
             <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_fr.zip">Download V3.1 stylesheet zip file (French version, Jun 02, 2020) </a>-->
             <!--</div>-->
             <div class="row">
-                <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V3.0, V3.1, V4.0, V4.1 and V4.2 stylesheet zip file (Updated 2021-03-26) </a>
+                <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V3.0, V3.1, V4.0, V4.1 and V4.2 stylesheet zip file (Updated 2021-05-03) </a>
             </div>
         </div>
 
@@ -290,7 +305,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: 2021-04-14</dt>
+            <dt>Date modified: 2021-05-03</dt>
         </dl>
     </div>
 </main>
