update index pages

--- a/pilot_v42_index.html
+++ b/pilot_v42_index.html
@@ -180,7 +180,7 @@
                     <div class="row">
                         <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/dossier-id-request-form-biologic-clinical-trial.html">Dossier ID Request Form for Biologic Clinical Trial Dossiers</a>
                         <ul>
-                            <li>Required to obtain a new Dossier ID, when converting a dossier from non-eCTD to eCTD format, or when filing a regulatory transaction related to an existing dossier for which you do not know the Dossier ID.</li>
+                            <li>Required to obtain a new Dossier ID, when filing a regulatory transaction related to an existing dossier for which you do not know the Dossier ID.</li>
                             <li>Upon completion, the form is auto-sent via email to Health Canada, outside of the regulatory transaction (submission).</li>
                             <li>Refer to section “2.4 Dossier ID Request Process” of the REP guidance document and REP Video Tutorial #3 below for details regarding the Dossier ID process.</li>
                         </ul>
