--- a/prod_v42_index-fr.html
+++ b/prod_v42_index-fr.html
@@ -164,7 +164,7 @@
             </div>
             <br>
             <div class="row">
-                <a href="https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/depot-soumissions-electroniques/modele-dossier-pharmaceutique.html">Formulaire de demande pour les ID de dossiers pour les médicaments à usage humain et désinfectant  (mise à jour fév. 2020)</a>
+                <a href="https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/depot-soumissions-electroniques/modele-dossier-pharmaceutique.html">Formulaire de demande pour les ID de dossiers pour les médicaments à usage humain et désinfectant </a>
                 <ul>
                     <li> Obligation d'obtenir un ID de dossier, avant de déposer une transaction réglementaire pour un nouveau dossier, lors de la conversion d'un dossier d'un format non-eCTD au format eCTD, ou lors du dépôt d'une transaction réglementaire pour un dossier dont vous ne connaissez pas l'ID de dossier.</li>
                     <li> Une fois rempli, le formulaire est envoyé automatiquement par courriel à Santé Canada, en dehors de la transaction réglementaire (soumission).</li>
@@ -172,9 +172,9 @@
                 </ul>
             </div>
             <div class="row">
-                <a href="https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/depot-soumissions-electroniques/modele-dossier-pharmaceutique.html">Formulaire de demande pour les ID de dossiers pour les médicaments vétérinaires (mise à jour fév. 2021)</a>
+                <a href="https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/depot-soumissions-electroniques/modele-dossier-pharmaceutique.html">Formulaire de demande pour les ID de dossiers pour les médicaments vétérinaires </a>
                 <ul>
-                    <li> Obligation d'obtenir un ID de dossier, avant de déposer une transaction réglementaire pour un nouveau dossier, lors de la conversion d'un dossier d'un format non-eCTD au format eCTD, ou lors du dépôt d'une transaction réglementaire pour un dossier dont vous ne connaissez pas l'ID de dossier.</li>
+                    <li> Obligation d'obtenir un ID de dossier, avant de déposer une transaction réglementaire pour un nouveau dossier, lors du dépôt d'une transaction réglementaire pour un dossier dont vous ne connaissez pas l'ID de dossier.</li>
                     <li> Une fois rempli, le formulaire est envoyé automatiquement par courriel à Santé Canada, en dehors de la transaction réglementaire (soumission).</li>
                     <li> Reportez-vous à la section «2.4 Processus de demande pour un ID de dossier» du document d'orientation PIR, et au didacticiel vidéo PIR n ° 3 ci-dessous pour plus de détails sur le processus d'identification de dossier.</li>
                 </ul>
