--- a/prod_v42_index.html
+++ b/prod_v42_index.html
@@ -179,7 +179,7 @@
                 </a>
 
                 <ul>
-                    <li> Required to obtain a Dossier ID, prior to filing a regulatory transaction for a new dossier, when converting a dossier from non-eCTD to eCTD format, or when filing a regulatory transaction for a dossier for which you do not know the Dossier ID.</li>
+                    <li> Required to obtain a Dossier ID, prior to filing a regulatory transaction for a new dossier, when filing a regulatory transaction for a dossier for which you do not know the Dossier ID.</li>
                     <li> Upon completion, the form is auto-sent via email the Health Canada, outside of the regulatory transaction (submission).</li>
                     <li> Refer to section “2.4 Dossier ID Request Process” of the REP guidance document, and REP Video Tutorial #3 below for details regarding the Dossier ID process.</li>
                 </ul>
