--- a/company/company.html
+++ b/company/company.html
@@ -194,7 +194,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h1 property="name" id="wb-cont">Company Template: Regulatory Enrolment Process (REP)<br>(Version 4.2.0)</h1>
+            <h1 property="name" id="wb-cont">Company Template: Regulatory Enrolment Process (REP) (Version 4.2.0)</h1>
             <p class="pagetag">
                 <strong>From <a href="https://www.canada.ca/en/health-canada.html">Health Canada</a></strong>
             </p>
