--- a/company/entreprise.html
+++ b/company/entreprise.html
@@ -192,7 +192,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h1 property="name" id="wb-cont">'Modèle de compagnie': Processus d'Inscription Réglementaire (Version 4.2.0)</h1>
+            <h1 property="name" id="wb-cont">Modèle de compagnie: Processus d'Inscription Réglementaire (Version 4.2.0)</h1>
             <p class="pagetag">
                 <strong>De <a href="https://www.canada.ca/fr/sante-canada.html">Santé Canada</a></strong>
             </p>
