--- a/io_index.html
+++ b/io_index.html
@@ -161,14 +161,14 @@
                 </div>
             </div>
 
-            <div>
-                <div class="row">
-                    <h2>Regulatory Enrolment Process: Pharma/Bio - Pilot V4.2</h2>
-                </div>
-                <div class="row">
-                    <a href="./pilot_v42_index.html">Pharma/Bio Forms - Pilot v4.2</a>
-                </div>
-            </div>
+            <!--<div>-->
+                <!--<div class="row">-->
+                    <!--<h2>Regulatory Enrolment Process: Pharma/Bio - Pilot V4.2</h2>-->
+                <!--</div>-->
+                <!--<div class="row">-->
+                    <!--<a href="./pilot_v42_index.html">Pharma/Bio Forms - Pilot v4.2</a>-->
+                <!--</div>-->
+            <!--</div>-->
 
             <div>
                 <div class="row">
