Update index page and the template version history pages

--- a/historique_révisions.html
+++ b/historique_révisions.html
@@ -147,14 +147,37 @@
             <div class="row">
                 <p>Santé Canada a mis à jour les modèles du processus d’inscription réglementaire (PIR) afin de refléter les modifications et les améliorations apportées. Reportez-vous à la Ligne directrice : Processus d’inscription réglementaire (PIR) : Médicaments à usage humain, à usage vétérinaire et désinfectants pour plus de renseignements sur les modèles.</p>
                 <p>Afin d’accéder à la version la plus récente du modèle, n’oubliez pas de supprimer fréquemment votre mémoire cache et d’« actualiser » les liens du modèle sur votre navigateur Web avant chaque utilisation.</p>
-                <p>Si vous avez des questions concernant le contenu de ce document, veuillez communiquer avec <a href="mailto:hc.ereview.sc@canada.ca" lang="en">hc.ereview.sc@canada.ca</a>.</p>
+                <p>Si vous avez des questions concernant le contenu de ce document, veuillez communiquer avec <a href="mailto:ereview@hc-sc.gc.ca" lang="en">ereview@hc-sc.gc.ca</a>.</p>
 
+            </div>
+            <div class="row">
+                <h3>Publication du 19 novembre 2021</h3>
+            </div>
+
+            <div class="row">
+                <table class="col-md-12">
+                    <tr>
+                        <th class="col-md-3">Modèle</th>
+                        <th class="col-md-9">Modification</th>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Modèle de compagnie (CO)
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Ajout du bouton « Soumettre à Santé Canada » pour générer un modèle de courriel. Pour plus de renseignements, consultez la section 3 de la Ligne directrice du PIR.</li>
+                                <li>Suppression du rôle du personne-resource pour le processus d'inscription réglemetaire.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
             </div>
 
             <div class="row">
                 <h3>Publication du 3 mai 2021</h3>
             </div>
-            <div>
+
+            <div class="row">
                 <table class="col-md-12">
                     <tr>
                         <th class="col-md-3">Modèle</th>
