--- a/prod_v42_index.html
+++ b/prod_v42_index.html
@@ -151,26 +151,29 @@
                 <h2>REP Templates & Form Links</h2>
             </div>
             <div class="row">
-                <a href="./version_history.html">Template version history  (updated 2021-05-03)</a>
+                <a href="./version_history.html">Template version history  (updated 2021-10-19)</a>
                 <br>
             </div>
             <div class="row">
                 <h2>Outside the Regulatory Transaction Process</h2>
             </div>
             <div class="row">
-                <a href="./prod_v42_wcag/company/company.html">Company (CO) Template (updated 2021-10-18)</a>
+                <a href="./prod_v42_wcag/company/company.html">Company (CO) Template (updated 2021-10-19)</a>
                 <ul>
                     <li> Required to obtain a company ID and/or providing updated company information to Health Canada.</li>
-                    <li> Sent via the CESG as a separate transaction; outside of the regulatory transaction (submission).</li>
-                    <li> Refer to section “2.3 Enrolment/Amendment Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #2 below for detailed requirements for the CO template. </li>
+                    <li> Sent via the email. *New - Effective immediately*</li>
+                    <ul>
+                        <li><strong>Reminder:</strong>Attach draft CO XML file to email prior to sending.</li>
+                        <li>If local email client application is not set up, email details are shown on the template for ease of reference.</li>
+                    </ul>
+                    <li> Refer to section “2.3 Enrolment/Amendment Process” of the REP guidance document. </li>
                 </ul>
             </div>
             <div class="row">
                 <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/filing-submissions-electronically/pharmaceutical-dossier-template.html">Dossier ID Request Form for Human drugs and disinfectants</a>
                 <ul>
                     <li> Required to obtain a Dossier ID, prior to filing a regulatory transaction for a new dossier, when converting a dossier from non-eCTD to eCTD format, or when filing a regulatory transaction for a dossier for which you do not know the Dossier ID.</li>
-                    <li> Upon completion, the form is auto-sent via email the Health Canada, outside of the regulatory transaction (submission).</li>
-                    <li> Refer to section “2.4 Dossier ID Request Process” of the REP guidance document, and REP Video Tutorial #3 below for details regarding the Dossier ID process.</li>
+                    <li> Refer to section “2.4 Dossier ID Request Process” of the REP guidance document.</li>
                 </ul>
             </div>
             <div class="row">
@@ -179,9 +182,8 @@
                 </a>
 
                 <ul>
-                    <li> Required to obtain a Dossier ID, prior to filing a regulatory transaction for a new dossier, when filing a regulatory transaction for a dossier for which you do not know the Dossier ID.</li>
-                    <li> Upon completion, the form is auto-sent via email the Health Canada, outside of the regulatory transaction (submission).</li>
-                    <li> Refer to section “2.4 Dossier ID Request Process” of the REP guidance document, and REP Video Tutorial #3 below for details regarding the Dossier ID process.</li>
+                    <li> Required to obtain a Dossier ID, prior to filing a regulatory transaction for a new dossier or a dossier for which you do not know the Dossier ID.</li>
+                    <li> Refer to section “2.4 Dossier ID Request Process” of the REP guidance document.</li>
                 </ul>
             </div>
             <div class="row">
@@ -214,7 +216,7 @@
             <div class="row">
                 <a href="./prod_v42_wcag/product/product.html">Product Information (PI) Template (updated on 2021-07-04)</a>
                 <ul>
-                    <li> Required when filing a new regulatory activity for an NDS, SNDS, ANDS, SANDS, NC, DIN (all types), or PDC, or in a subsequent transaction for an existing regulatory activity.</li>
+                    <li> Required for only a subset of transactions. Refer to section “2.5.2 Product information (PI) Template and Process” of the REP Guidance Document for list of subset transaction.</li>
                     <li> Sent via the CESG in folder 1.2.1  for human drugs and disinfectants or part I folder 1.5 for veterinary drugs of the regulatory transaction (when provided).</li>
                     <li> Refer to sections “2.5 Regulatory Transaction Filing Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>
                 </ul>
@@ -278,14 +280,6 @@
                     REP Video Tutorial #1: Overview </a>
             </div>
             <div class="row">
-                <a href="https://youtu.be/a09eruLX1LM" target="_blank" rel="noopener noreferrer">
-                    REP Video Tutorial #2: Company Template</a>
-            </div>
-            <div class="row">
-                <a href="https://youtu.be/W9O0ZuY6FtQ" target="_blank" rel="noopener noreferrer">
-                    REP Video Tutorial #3: Dossier ID Request Form</a>
-            </div>
-            <div class="row">
                 <a href="https://youtu.be/QKiSau4Zpp0" target="_blank" rel="noopener noreferrer">
                     REP Video Tutorial #4: Regulatory Transaction and Product Information Templates</a>
             </div>
@@ -305,7 +299,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: 2021-10-18</dt>
+            <dt>Date modified: 2021-10-19</dt>
         </dl>
     </div>
 </main>
