--- a/version_history.html
+++ b/version_history.html
@@ -150,14 +150,37 @@
             <div class="row">
                 <p>Health Canada has updated the Regulatory Enrolment Process (REP) templates to reflect process changes and improvements. Refer to the Guidance Document: Regulatory Enrolment Process (REP) – Drugs for Human and Veterinary Use and Disinfectants for more information on the templates.</p>
                 <p>In order to access the most up-to-date version of the template, please be reminded to delete your cache frequently and “refresh” the template links on your web browser prior to each use.</p>
-                <p>Should you have any questions regarding the content of this document, please contact <a href="mailto:hc.ereview.sc@canada.ca" lang="en">hc.ereview.sc@canada.ca</a>.</p>
+                <p>Should you have any questions regarding the content of this document, please contact <a href="mailto:ereview@hc-sc.gc.ca" lang="en">ereview@hc-sc.gc.ca</a>.</p>
+            </div>
+
+            <div class="row">
+                <h3>November 19, 2021 Release</h3>
+            </div>
+
+            <div class="row">
+                <table class="col-md-12">
+                    <tr>
+                        <th class="col-md-3">Template</th>
+                        <th class="col-md-9">Change</th>
+                    </tr>
+                    <tr>
+                        <td class="col-md-3">Company (CO) Template
+                        </td>
+                        <td class="col-md-9">
+                            <ul>
+                                <li>Added the “Submit to Health Canada” button to generate email template. Refer to section 3 of the REP guidance document for more information.</li>
+                                <li>Removed Primary REP contact role.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
             </div>
 
             <div class="row">
                 <h3>May 3, 2021 Release</h3>
             </div>
 
-            <div>
+            <div class="row">
                 <table class="col-md-12">
                     <tr>
                         <th class="col-md-3">Template</th>
