--- a/prod_v42_index-fr.html
+++ b/prod_v42_index-fr.html
@@ -148,18 +148,22 @@
                 <h2>Liens de modèle et le de formulaire</h2>
             </div>
             <div class="row">
-                <a href="./historique_révisions.html">Historique des versions du modèle  (mise à jour 03/05/2021)</a>
+                <a href="./historique_révisions.html">Historique des versions du modèle  (mise à jour 19/10/2021)</a>
                 <br>
             </div>
             <div class="row">
                 <h2>En dehors du processus de transaction réglementaire</h2>
             </div>
             <div class="row">
-                <a href="./prod_v42_wcag/company/entreprise.html">Modèle de l'entreprise (mise à jour 18/10/2021)</a>
+                <a href="./prod_v42_wcag/company/entreprise.html">Modèle de l'entreprise (mise à jour 19/10/2021)</a>
                 <ul>
                     <li> Obligatoire pour obtenir un identifiant d'entreprise et / ou fournir des informations à jour sur l'entreprise à Santé Canada.</li>
-                    <li> Envoyé via la PCDE en tant que transaction distincte; en dehors de la transaction réglementaire (soumission).</li>
-                    <li> Reportez-vous à la section «2.3 Processus d’inscription ou de modification de l’entreprise » et «3.2 Structure des dossiers» du document d'orientation PIR, et au didacticiel vidéo PIR # 2 ci-dessous pour les exigences détaillées du modèle CO.</li>
+                    <li> Envoyé par courriel. * Nouveau - En vigueur immédiatement *</li>
+                    <ul>
+                        <li><strong>Rappel: </strong>Joignez l’ébauche de fichier CO XML avant l’envoi.</li>
+                        <li>Si l'application client de messagerie locale n'est pas configurée, les détails de le courriel sont affichés sur le modèle pour faciliter la référence.</li>
+                    </ul>
+                    <li> Reportez-vous à la section «2.3 Processus d’inscription ou de modification de l’entreprise » du document d'orientation PIR.</li>
                 </ul>
             </div>
             <br>
@@ -167,16 +171,14 @@
                 <a href="https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/depot-soumissions-electroniques/modele-dossier-pharmaceutique.html">Formulaire de demande pour les ID de dossiers pour les médicaments à usage humain et désinfectant </a>
                 <ul>
                     <li> Obligation d'obtenir un ID de dossier, avant de déposer une transaction réglementaire pour un nouveau dossier, lors de la conversion d'un dossier d'un format non-eCTD au format eCTD, ou lors du dépôt d'une transaction réglementaire pour un dossier dont vous ne connaissez pas l'ID de dossier.</li>
-                    <li> Une fois rempli, le formulaire est envoyé automatiquement par courriel à Santé Canada, en dehors de la transaction réglementaire (soumission).</li>
-                    <li> Reportez-vous à la section «2.4 Processus de demande pour un ID de dossier» du document d'orientation PIR, et au didacticiel vidéo PIR n ° 3 ci-dessous pour plus de détails sur le processus d'identification de dossier.</li>
+                    <li> Reportez-vous à la section «2.4 Processus de demande pour un ID de dossier» du document d'orientation PIR.</li>
                 </ul>
             </div>
             <div class="row">
                 <a href="https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/depot-soumissions-electroniques/modele-dossier-pharmaceutique.html">Formulaire de demande pour les ID de dossiers pour les médicaments vétérinaires </a>
                 <ul>
-                    <li> Obligation d'obtenir un ID de dossier, avant de déposer une transaction réglementaire pour un nouveau dossier, lors du dépôt d'une transaction réglementaire pour un dossier dont vous ne connaissez pas l'ID de dossier.</li>
-                    <li> Une fois rempli, le formulaire est envoyé automatiquement par courriel à Santé Canada, en dehors de la transaction réglementaire (soumission).</li>
-                    <li> Reportez-vous à la section «2.4 Processus de demande pour un ID de dossier» du document d'orientation PIR, et au didacticiel vidéo PIR n ° 3 ci-dessous pour plus de détails sur le processus d'identification de dossier.</li>
+                    <li> Obligation d'obtenir un ID de dossier, avant de déposer une transaction réglementaire pour un nouveau dossier ou un dossier dont vous ne connaissez pas l'ID de dossier.</li>
+                    <li> Reportez-vous à la section «2.4 Processus de demande pour un ID de dossier» du document d'orientation PIR.</li>
                 </ul>
             </div>
             <div class="row">
@@ -213,7 +215,7 @@
             <div class="row">
                 <a href="./prod_v42_wcag/product/produit.html">Modèle d'information sur le produit (IP) (mise à jour 04/07/2021)</a>
                 <ul>
-                    <li> Obligatoire lors du dépôt d'une nouvelle activité réglementaire pour un PDN, SPDN, PADN, SPADN, PM, DDIN (tous types) ou CPA, ou lors d'une transaction ultérieure pour une activité réglementaire existante.</li>
+                    <li> Obligatoire uniquement pour un sous-ensemble de transactions. Reportez-vous à la section « 2.5.2 Modèle et processus d'information sur le produit (PI) » du document d'orientation du PIR pour la liste des transactions de sous-ensemble.</li>
                     <li> Envoyé via la PCDE dans le dossier 1.2.1 pour les médicaments à usage humain ou partie I dossier 1.5 pour les médicaments vétérinaires de la transaction réglementaire (si fourni).</li>
                     <li> Reportez-vous aux sections «2.5 Modèle de transaction réglementaire (TR) et processus» et «3.2 Structure des dossiers» du document d'orientation du PIR, et au didacticiel vidéo du PIR # 4, pour une description détaillée des exigences pour les modèles TR et IP.</li>
                 </ul>
@@ -261,14 +263,6 @@
                     Didacticiel vidéo PIR no. 1: Aperçu</a>
             </div>
             <div class="row">
-                <a href="https://youtu.be/VbM8seA9f3Q" target="_blank" rel="noopener noreferrer">
-                    Didacticiel vidéo PIR no. 2: Modèle d'entreprise</a>
-            </div>
-            <div class="row">
-                <a href="https://youtu.be/T6EQ6UA3XDI" target="_blank" rel="noopener noreferrer">
-                    Didacticiel vidéo PIR no. 3: Demande d'ID de dossier</a>
-            </div>
-            <div class="row">
                 <a href="https://youtu.be/q88jb8TYMtU" target="_blank" rel="noopener noreferrer">
                     Didacticiel vidéo PIR no. 4: Modèles de transactions réglementaires et d'information sur le produit</a>
             </div>
@@ -279,7 +273,7 @@
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date de modification : 18/10/2021</dt>
+                <dt>Date de modification : 19/10/2021</dt>
             </dl>
         </div>
     </div>
