template index page and version history page update v2

--- a/prod_v42_index-fr.html
+++ b/prod_v42_index-fr.html
@@ -148,20 +148,19 @@
                 <h2>Liens de modèle et le de formulaire</h2>
             </div>
             <div class="row">
-                <a href="./historique_révisions.html">Historique des versions du modèle  (mise à jour 19/10/2021)</a>
+                <a href="./historique_révisions.html">Historique des versions du modèle  (mise à jour 29/10/2021)</a>
                 <br>
             </div>
             <div class="row">
                 <h2>En dehors du processus de transaction réglementaire</h2>
             </div>
             <div class="row">
-                <a href="./prod_v42_wcag/company/entreprise.html">Modèle de l'entreprise (mise à jour 19/10/2021)</a>
+                <a href="./prod_v42_wcag/company/entreprise.html">Modèle de l'entreprise (mise à jour 29/10/2021)</a>
                 <ul>
                     <li> Obligatoire pour obtenir un identifiant d'entreprise et / ou fournir des informations à jour sur l'entreprise à Santé Canada.</li>
-                    <li> Envoyé par courriel. * Nouveau - En vigueur immédiatement *</li>
+                    <li> Envoyé par courriel. <strong>* Nouveau - En vigueur immédiatement *</strong></li>
                     <ul>
-                        <li><strong>Rappel: </strong>Joignez l’ébauche de fichier CO XML avant l’envoi.</li>
-                        <li>Si l'application client de messagerie locale n'est pas configurée, les détails de le courriel sont affichés sur le modèle pour faciliter la référence.</li>
+                        <li>Joignez l’ébauche de fichier CO XML avant l’envoi.</li>
                     </ul>
                     <li> Reportez-vous à la section «2.3 Processus d’inscription ou de modification de l’entreprise » du document d'orientation PIR.</li>
                 </ul>
@@ -273,7 +272,7 @@
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date de modification : 19/10/2021</dt>
+                <dt>Date de modification : 29/10/2021</dt>
             </dl>
         </div>
     </div>
