--- a/prod_v42_index.html
+++ b/prod_v42_index.html
@@ -151,20 +151,19 @@
                 <h2>REP Templates & Form Links</h2>
             </div>
             <div class="row">
-                <a href="./version_history.html">Template version history  (updated 2021-10-19)</a>
+                <a href="./version_history.html">Template version history  (updated 2021-10-29)</a>
                 <br>
             </div>
             <div class="row">
                 <h2>Outside the Regulatory Transaction Process</h2>
             </div>
             <div class="row">
-                <a href="./prod_v42_wcag/company/company.html">Company (CO) Template (updated 2021-10-19)</a>
+                <a href="./prod_v42_wcag/company/company.html">Company (CO) Template (updated 2021-10-29)</a>
                 <ul>
-                    <li> Required to obtain a company ID and/or providing updated company information to Health Canada.</li>
-                    <li> Sent via the email. *New - Effective immediately*</li>
+                    <li> Required to obtain a company ID and/or update company information to Health Canada.</li>
+                    <li> Sent via email. <strong>*New - Effective immediately*</strong></li>
                     <ul>
-                        <li><strong>Reminder:</strong>Attach draft CO XML file to email prior to sending.</li>
-                        <li>If local email client application is not set up, email details are shown on the template for ease of reference.</li>
+                        <li>Attach draft CO XML file to email prior to sending.</li>
                     </ul>
                     <li> Refer to section “2.3 Enrolment/Amendment Process” of the REP guidance document. </li>
                 </ul>
@@ -243,7 +242,7 @@
                 <h2>Internal User (i.e. HPFB) Links</h2>
             </div>
             <div class="row">
-                <a href="./prod_v42_wcag/company/companyINT-en.html">Company Enrolment -Internal (updated 2021-10-19, v4.2.2) </a>
+                <a href="./prod_v42_wcag/company/companyINT-en.html">Company Enrolment -Internal (updated 2021-10-29, v4.2.2) </a>
             </div>
             <!--<div class="row">-->
             <!--<a href="./prod_v3/dossier/dossierINT-en.html#main">Dossier Enrolment Internal (Apr 29, 2019, v2.2.1)</a>-->
@@ -299,7 +298,7 @@
 
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <dl id="wb-dtmd">
-            <dt>Date modified: 2021-10-19</dt>
+            <dt>Date modified: 2021-10-29</dt>
         </dl>
     </div>
 </main>
